@@ -16,6 +16,8 @@ import jakarta.persistence.*;
 import java.time.LocalTime;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+
 @Entity
 @Table(name = "stores")
 public class Store {
@@ -101,7 +103,7 @@ public class Store {
         synchronized (Market.purchaseLock) {
             Product p = products.getProductById(productId);
             synchronized (p.getProductName().intern()) {
-                p.setAmount(p.getAmount() + amountToAdd);
+                p.setQuantity(p.getQuantity() + amountToAdd);
                 products.updateProduct(p);
             }
         }
@@ -110,7 +112,7 @@ public class Store {
     public PurchaseProduct subtractForPurchase(int productId, int quantity) throws Exception {
         Product p = getProduct(productId);
         synchronized (p) {
-            p.setAmount(p.getAmount() - quantity);
+            p.setQuantity(p.getQuantity() - quantity);
             products.updateProduct(p);
         }
         return new PurchaseProduct(p, quantity, storeId);
@@ -140,8 +142,8 @@ public class Store {
                 logger.error("cannot set quantity to less then 0");
                 throw new Exception("cannot set quantity to less then 0");
             }
-            p = new Product(storeId, this.productIdCounter.getAndIncrement(), productName, price, category, description,quantity);
-            if(!categories.getAllCategory().stream().anyMatch(c-> c.getCategoryName().equals(category)))
+            p = new Product(storeId, this.productIdCounter.getAndIncrement(), productName, price, category, quantity, description, 0);
+            if(categories.getAllCategory().stream().noneMatch(c-> c.getCategoryName().equals(category)))
                 categories.addString(new Category(category));
             products.saveProduct(p);
         }
@@ -272,7 +274,7 @@ public class Store {
 
     public long addCategoryDiscount(String category, double discountPercentage, int compositionType) throws Exception {
         List<Category> categoryStrings = categories.getAllCategory();
-        if (!categoryStrings.stream().anyMatch(c-> c.getCategoryName().equals(category))) {
+        if (categoryStrings.stream().noneMatch(c-> c.getCategoryName().equals(category))) {
             logger.error("Category doesn't exist");
             throw new Exception("Category doesn't exist");
         }
@@ -305,24 +307,22 @@ public class Store {
 
     //Discount policies
     public Integer addMinQuantityDiscountPolicy(int discountId, int productId, int minQuantity, boolean allowNone) throws Exception {
-        productDiscountPolicyMap.addDiscountPolicy(new MinQuantityDiscountPolicy(purchasePolicyCounter++, checkProductExists(productId), minQuantity, allowNone,this.storeId,discountId));
-        return purchasePolicyCounter - 1;
+        return productDiscountPolicyMap.addDiscountPolicy(new MinQuantityDiscountPolicy(purchasePolicyCounter++, checkProductExists(productId), minQuantity, allowNone,this.storeId,discountId));
     }
 
     public Integer addMaxQuantityDiscountPolicy(int discountId, int productId, int maxQuantity) throws Exception {
-        productDiscountPolicyMap.addDiscountPolicy(new MaxQuantityDiscountPolicy(purchasePolicyCounter++, checkProductExists(productId), maxQuantity,this.storeId,discountId));
-        return purchasePolicyCounter - 1;
+        return productDiscountPolicyMap.addDiscountPolicy(new MaxQuantityDiscountPolicy(purchasePolicyCounter++, checkProductExists(productId), maxQuantity,this.storeId,discountId));
 
     }
 
     public Integer addMinBagTotalDiscountPolicy(int discountId, double minTotal) throws Exception {
-        productDiscountPolicyMap.addDiscountPolicy(new MinBagTotalDiscountPolicy(purchasePolicyCounter++, minTotal,this.storeId,discountId));
-        return purchasePolicyCounter - 1;
+        return productDiscountPolicyMap.addDiscountPolicy(new MinBagTotalDiscountPolicy(purchasePolicyCounter++, minTotal,this.storeId,discountId));
 
     }
 
     public void joinDiscountPolicies(int policyId1, int policyId2, int operator) throws Exception {
-        BaseDiscountPolicy found_1 = productDiscountPolicyMap.getDiscountPolicyById(policyId1), found_2 = found_1 = productDiscountPolicyMap.getDiscountPolicyById(policyId1);
+        BaseDiscountPolicy found_1 = productDiscountPolicyMap.getDiscountPolicyById(policyId1);
+        BaseDiscountPolicy found_2 = productDiscountPolicyMap.getDiscountPolicyById(policyId2);
         if (found_1 == null) {
             logger.error("couldn't find discount policy of id" + policyId1);
             throw new Exception("couldn't find discount policy of id" + policyId1);
@@ -331,13 +331,15 @@ public class Store {
             logger.error("couldn't find discount policy of id" + policyId2);
             throw new Exception("couldn't find discount policy of id" + policyId2);
         }
-        if(found_2.getDiscount_id() != found_1.getDiscount_id()){
+        if(found_2.getDiscount_id().longValue() != found_1.getDiscount_id().longValue()){
             logger.error("the two policies refers to two different discounts policy1 discount " + found_1.getDiscount_id() + "policy2 discount" + found_2.getDiscount_id());
             throw new Exception("he two policies refers to two different discounts");
         }
         productDiscountPolicyMap.addDiscountPolicy(new DiscountPolicyOperation(discountPolicyCounter++, found_1, operator, found_2,this.storeId, Math.toIntExact(found_1.getDiscount_id())));
-        productDiscountPolicyMap.removeDiscountPolicy(found_1);
-        productDiscountPolicyMap.removeDiscountPolicy(found_2);
+        found_1.setValid(false);
+        found_2.setValid(false);
+        productDiscountPolicyMap.updateBaseDiscountPolicy(found_1);
+        productDiscountPolicyMap.updateBaseDiscountPolicy(found_2);
     }
 
     public void removeDiscountPolicy(int policyId) throws Exception {
@@ -362,15 +364,16 @@ public class Store {
             productList.put(getProduct(i), productIdList.get(i));
         }
         Product product = checkProductExists(productId);
-        List<BaseDiscountPolicy> baseDiscountPolicies = productDiscountPolicyMap.getAllDiscountPolicies().stream().filter(pdp -> pdp.getStore() == this.storeId).toList();
-        for (BaseDiscountPolicy baseDiscountPolicy: baseDiscountPolicies) {
-            Discount discount = discountRepo.get(baseDiscountPolicy.getDiscount_id());
-
-            if (discount.checkApplies(product) && productDiscountPolicyMap.getAllDiscountPolicies().stream().allMatch(pdp -> pdp.evaluate(productList))) {
+        List<Discount> discounts=new DiscountDAO().getAllDiscounts().stream().toList();
+        for (Discount discount : discounts) {
+            if(discount.checkApplies(product) && productDiscountPolicyMap.getAllDiscountPolicies().stream().filter(
+                    pdp -> pdp.isValid() &&
+                            pdp.getStore() == this.storeId &&
+                            pdp.getDiscount_id().longValue() == discount.getDiscountId().longValue()
+            ).allMatch(pdp -> pdp.evaluate(productList))){
                 discountPercentage = discount.calculateNewPercentage(discountPercentage);
             }
         }
-
         return discountPercentage;
     }
 
@@ -403,21 +406,20 @@ public class Store {
     }
 
     public void removeEmployee(Member member) {
-        employees.removeMember(member);
+
     }
 
     public Map<Discount, List<BaseDiscountPolicy>> getProductDiscountPolicyMap() {
         Map<Discount, List<BaseDiscountPolicy>> discountPolicyMap = new HashMap<>();
-        List<BaseDiscountPolicy> allBaseDiscount = productDiscountPolicyMap.getAllDiscountPolicies().stream().filter(bpb->bpb.getStore() == this.storeId).toList();
-        Set<Discount> discounts = new HashSet<>();
-        for (BaseDiscountPolicy b:allBaseDiscount) {
-            discounts.add(discountRepo.get(b.getDiscount_id()));
-        }
+        List<Discount> discounts=new DiscountDAO().getAllDiscounts().stream().toList();
         for(Discount d: discounts){
-            List<BaseDiscountPolicy> thisDiscounts = allBaseDiscount.stream().filter(bpb->bpb.getDiscount_id() == d.getDiscountId()).toList();
+            List<BaseDiscountPolicy> thisDiscounts = productDiscountPolicyMap.getAllDiscountPolicies().stream().filter(
+                    pdp -> pdp.isValid() &&
+                            pdp.getStore() == this.storeId &&
+                            pdp.getDiscount_id().longValue() == d.getDiscountId().longValue()
+            ).collect(Collectors.toList());
             discountPolicyMap.put(d,thisDiscounts);
         }
-
         return discountPolicyMap;
     }
 
@@ -430,14 +432,6 @@ public class Store {
             employees.add(p.getPositionMember());
         }
         return employees;
-    }
-
-    @ElementCollection
-    @CollectionTable(name = "store_categories",
-            joinColumns = @JoinColumn(name = "store_id"))
-    @Column(name = "category")
-    public IStringSetRepository getCategories() {
-        return categories;
     }
 
     public List<String> getStoreOwners() {
